[gd_scene load_steps=13 format=3 uid="uid://by50wqq75u5of"]

[ext_resource type="Script" path="res://Game/UI/UiBetweenLevels.gd" id="1_0yslh"]
[ext_resource type="Texture2D" uid="uid://dgxnj3fck7hh1" path="res://Game/weapons/swords/sword_01.png" id="3_u54xn"]
[ext_resource type="Texture2D" uid="uid://bucgau2pjkf34" path="res://Game/weapons/shields/shield_01.png" id="4_fis3w"]
[ext_resource type="Texture2D" uid="uid://vmkxsw3br4xc" path="res://Game/UI/buttonNormal.png" id="5_aswua"]

[sub_resource type="SystemFont" id="SystemFont_thy28"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_5l523"]
default_font = SubResource("SystemFont_thy28")
default_font_size = 25

[sub_resource type="Theme" id="Theme_x7t2x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfln7"]
bg_color = Color(0.415686, 0.027451, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k5mlp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5h4c0"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ppud4"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="Theme" id="Theme_tce4g"]

[node name="UiBetweenLevels" type="Node2D"]
process_mode = 2
script = ExtResource("1_0yslh")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="LabelContainer" type="MarginContainer" parent="HUD"]
z_index = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 73.0
offset_top = -131.0
offset_right = -81.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource("Theme_5l523")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LabelPanel" type="Panel" parent="HUD/LabelContainer"]
self_modulate = Color(1, 1, 1, 0.160784)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_x7t2x")
theme_override_styles/panel = SubResource("StyleBoxFlat_sfln7")

[node name="Label_lbl" type="TextEdit" parent="HUD/LabelContainer/LabelPanel"]
layout_mode = 0
offset_top = -18.0
offset_right = 916.0
offset_bottom = 113.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_k5mlp")
theme_override_styles/focus = SubResource("StyleBoxFlat_5h4c0")
theme_override_styles/read_only = SubResource("StyleBoxFlat_ppud4")
text = "  Click  if you want the new Q or E items.
  Also which stat you want to upgrade.
  Press OK to return to game when done."
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="Stats_Container" type="VBoxContainer" parent="HUD"]
offset_left = 751.0
offset_top = 141.0
offset_right = 1036.0
offset_bottom = 491.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Attr_upg_desc" type="RichTextLabel" parent="HUD/Stats_Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = SubResource("Theme_tce4g")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
text = "Stats Upgrade Info: "

[node name="STR_upg_btn" type="Button" parent="HUD/Stats_Container"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "STRENGTH"

[node name="DEX_upg_btn" type="Button" parent="HUD/Stats_Container"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "DEXTERITY"

[node name="WIS_upg_btn" type="Button" parent="HUD/Stats_Container"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "WISDOM"

[node name="EYE_upg_btn" type="Button" parent="HUD/Stats_Container"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
text = "EYESIGHT"

[node name="OK_btn" type="Button" parent="HUD/Stats_Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
disabled = true
text = "OK"

[node name="Weapons_Container" type="VBoxContainer" parent="HUD"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -937.0
offset_top = 157.0
offset_right = -777.0
offset_bottom = -238.0
grow_horizontal = 0
grow_vertical = 2

[node name="itemQ_btn" type="Button" parent="HUD/Weapons_Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
text = "




"
icon = ExtResource("3_u54xn")
icon_alignment = 1
expand_icon = true

[node name="itemE_btn" type="Button" parent="HUD/Weapons_Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
text = "



"
icon = ExtResource("4_fis3w")
icon_alignment = 1
expand_icon = true

[node name="TextureTextBackground" type="TextureRect" parent="HUD"]
modulate = Color(1, 1, 1, 0.784314)
anchors_preset = -1
anchor_top = 0.803
anchor_right = 0.984
anchor_bottom = 1.0
offset_top = -78.16
offset_right = 26.28
offset_bottom = 42.155
texture = ExtResource("5_aswua")

[node name="Description_Container" type="VBoxContainer" parent="HUD"]
offset_left = 303.0
offset_top = 157.0
offset_right = 733.0
offset_bottom = 482.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QE_Descriptions" type="RichTextLabel" parent="HUD/Description_Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 325)
layout_mode = 2
theme = SubResource("Theme_tce4g")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
text = "SWORD:

SHIELD:"

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
z_index = -100
offset_top = 119.0
offset_right = 1089.0
offset_bottom = 762.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="HUD/Stats_Container/STR_upg_btn" to="." method="_on_str_upg_btn_pressed"]
[connection signal="pressed" from="HUD/Stats_Container/DEX_upg_btn" to="." method="_on_dex_upg_btn_pressed"]
[connection signal="pressed" from="HUD/Stats_Container/WIS_upg_btn" to="." method="_on_wis_upg_btn_pressed"]
[connection signal="pressed" from="HUD/Stats_Container/EYE_upg_btn" to="." method="_on_eye_upg_btn_pressed"]
[connection signal="pressed" from="HUD/Stats_Container/OK_btn" to="." method="_on_ok_btn_pressed"]
[connection signal="pressed" from="HUD/Weapons_Container/itemQ_btn" to="." method="_on_item_q_btn_pressed"]
[connection signal="pressed" from="HUD/Weapons_Container/itemE_btn" to="." method="_on_item_e_btn_pressed"]
